--- a/style.css
+++ b/style.css
@@ -1,61 +1,47 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
-body{
+.cont{
+    background: darkmagenta;
+    display:grid;
     height: 100vh;
-    width: 100vw;
-    background-color: rgb(49, 172, 0);
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-gap: 5px;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
     grid-template-areas: 
-    "a a"
-    "b d"
-    "c c";
+    "a a a"
+    "c b d"
+    "c b d";
 }
-
-header{
+.head{
     grid-area: a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-color: rgb(150, 0, 196);
-}
-
-main{
-    grid-area: b;
-    display: flex;
-    background-color: rgb(212, 0, 255);
+    background:darkmagenta;
+    display:flex;
     justify-content: center;
     align-items: center;
 }
-
-nav{
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:3px;
     grid-area: d;
-    background-color: rgb(225, 0, 255);
+    background: darkmagenta;
 }
-
-footer{
+.ins{
     grid-area: c;
-    background-color: rgb(204, 0, 255);
+    background: darkmagenta;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    flex-direction: column;
 }
-
-.tabelka{
-    border-collapse: collapse;
-}
-
-th, tr{
-    background-color: rgb(44, 44, 44);
-    color: white;
-}
-
-tr:hover{
-    background-color: white;
-    color: black;
-    font-weight: bold; 
+.d{
+    grid-area: b;
+    background: darkmagenta;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
