--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     justify-content: center;
     align-items: center;
     margin:3px;
-    grid-area: d;
+    grid-area: b;
     background: darkmagenta;
 }
 .ins{
